Bug fix: prevent product images overflowing container while window resizing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -401,7 +401,7 @@ footer .social-icon a i {
 
 .product-tile > div {
     margin: 0 auto;
-    width: 300px;
+    max-width: 300px;
 }
 
 .product-tile-img {
@@ -411,9 +411,8 @@ footer .social-icon a i {
 }
 
 .product-tile-img img {
-    width: 300px;
-    
-    height: 350px;
+    max-width: 100%;
+    height: 300px;
     object-fit: scale-down;
 }
 
